move description under input, added required to the label, added for attribute to label

--- a/views/css/buckaroo3.admin.css
+++ b/views/css/buckaroo3.admin.css
@@ -7,3 +7,7 @@ legend.active {
     background-color: #97C600;
     color: white;
 }
+.buckaroo-field-description {
+    font-size: 12px;
+    margin-top: 3px;
+}
