--- a/views/css/buckaroo3.admin.css
+++ b/views/css/buckaroo3.admin.css
@@ -11,3 +11,64 @@ legend.active {
     font-size: 12px;
     margin-top: 3px;
 }
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 50px;
+    height: 28px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 22px;
+    width: 22px;
+    left: 3px;
+    bottom: 3px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: #2196F3;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+    transform: translateX(22px); /* Adjusted for moderately sized switch */
+}
+
+.slider.round {
+    border-radius: 28px; /* Adjusted for moderately sized switch */
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+.button-group {
+    display: flex;
+    justify-content: space-between;  /* optional, if you want to space your buttons evenly */
+}
