--- a/views/css/buckaroo3.css
+++ b/views/css/buckaroo3.css
@@ -326,7 +326,17 @@ p.payment_module a.buckaroo_paylink:after {
     vertical-align: middle;
     margin-bottom: 5px;
 }
+.bk-credit-card {
+    display: flex;
+    vertical-align: middle;
+    margin-bottom: 5px;
+}
 .bk-issuer-logo {
+    max-height: 25px;
+    width: auto;
+    margin: 0 5px;
+}
+.bk-creditcard-logo {
     max-height: 25px;
     width: auto;
     margin: 0 5px;
@@ -358,4 +368,9 @@ table.bankdetails td.label, table.bankdetails td.labelvalue {
 .buckaroo-validation-message {
     color:#FF0000;
     margin-top:5px;
+}
+
+.payment-option label img {
+    float: left;
+    margin-right: 10px;
 }
