--- a/views/css/buckaroo3.admin.css
+++ b/views/css/buckaroo3.admin.css
@@ -72,3 +72,8 @@ input:checked + .slider:before {
     display: flex;
     justify-content: space-between;  /* optional, if you want to space your buttons evenly */
 }
+
+#subtab-AdminBuckaroo > a > i.mi-buckaroo {
+    background: url(../img/buckaroo-menu-logo.png) no-repeat scroll center center / contain transparent;
+    width: 16px;
+}
