--- a/views/css/buckaroo3.css
+++ b/views/css/buckaroo3.css
@@ -443,7 +443,7 @@ table.bankdetails td.label, table.bankdetails td.labelvalue {
         min-width: 55px;
     }
     .bk-method-selector input:checked + .bk-issuer-label {
-        background-color: #cdd905;
+        background-color: #b2b2b2;
         color: #fff;
         border-radius: 5px;
     }
