--- a/views/css/buckaroo3.css
+++ b/views/css/buckaroo3.css
@@ -422,12 +422,8 @@ table.bankdetails td.label, table.bankdetails td.labelvalue {
     }
 }
 @media screen and (min-width: 768px) {
-    .bk-creditcard-selector img, .bk-ideal-selector img{
-        max-width: 25px;
-        margin: 0 5px;
-    }
 
-    .bk-creditcard-selector .bk-issuer-label, .bk-ideal-selector .bk-issuer-label {
+    .bk-method-selector .bk-issuer-label, .bk-ideal-selector .bk-issuer-label {
         flex: 1;
         text-align: left;
     }
@@ -442,16 +438,16 @@ table.bankdetails td.label, table.bankdetails td.labelvalue {
         margin-left: 10px;
         font-weight: bold;
     }
-    .bk-paybybank-selector {
+    .bk-method-selector {
         display: flex;
         flex-wrap: wrap;
     }
-    .bk-paybybank-selector .bk-method-issuer  {
+    .bk-method-selector .bk-method-issuer  {
         flex: 25% 0;
         min-width: 55px;
     }
 
-    .bk-paybybank-selector .bk-issuer-label strong {
+    .bk-method-selector .bk-issuer-label strong {
         display: block;
         text-align: center;
         font-size: 12px;
@@ -459,15 +455,15 @@ table.bankdetails td.label, table.bankdetails td.labelvalue {
         color: #6d6d6d;
     }
 
-    .bk-paybybank-selector input:checked + .bk-issuer-label strong {
+    .bk-method-selector input:checked + .bk-issuer-label strong {
         color: #000;
     }
 
-    .bk-paybybank-selector input:checked + .bk-issuer-label {
+    .bk-method-selector input:checked + .bk-issuer-label {
         background-color: #EDEDED;
         border-radius: 5px;
     }
-    .bk-paybybank-selector .bk-issuer-label{
+    .bk-method-selector .bk-issuer-label{
         padding-bottom: 5px;
         cursor: pointer;
         display: flex;
@@ -477,12 +473,12 @@ table.bankdetails td.label, table.bankdetails td.labelvalue {
     }
 
 
-    .bk-paybybank-selector .bk-issuer-label img {
+    .bk-method-selector .bk-issuer-label img {
         padding: 10px 20px;
         width: 70px;
     }
 
-    .bk-paybybank-selector input {
+    .bk-method-selector input {
         display:none;
     }
 }
