--- a/dev/src/assets/css/fontawesome/duotone.scss
+++ b/dev/src/assets/css/fontawesome/duotone.scss
@@ -13,8 +13,8 @@
   src: url('#{$fa-font-path}/fa-duotone-900.eot?#iefix') format('embedded-opentype'),
   url('#{$fa-font-path}/fa-duotone-900.woff2') format('woff2'),
   url('#{$fa-font-path}/fa-duotone-900.woff') format('woff'),
-  url('#{$fa-font-path}/fa-duotone-900.ttf') format('truetype'),
-  url('#{$fa-font-path}/fa-duotone-900.svg#fontawesome') format('svg');
+  url('#{$fa-font-path}/fa-duotone-900.ttf') format('truetype');
+  //url('#{$fa-font-path}/fa-duotone-900.svg#fontawesome') format('svg');
 }
 
 .fad {
