--- a/dev/src/assets/css/fontawesome/light.scss
+++ b/dev/src/assets/css/fontawesome/light.scss
@@ -13,8 +13,8 @@
   src: url('#{$fa-font-path}/fa-light-300.eot?#iefix') format('embedded-opentype'),
   url('#{$fa-font-path}/fa-light-300.woff2') format('woff2'),
   url('#{$fa-font-path}/fa-light-300.woff') format('woff'),
-  url('#{$fa-font-path}/fa-light-300.ttf') format('truetype'),
-  url('#{$fa-font-path}/fa-light-300.svg#fontawesome') format('svg');
+  url('#{$fa-font-path}/fa-light-300.ttf') format('truetype');
+  //url('#{$fa-font-path}/fa-light-300.svg#fontawesome') format('svg');
 }
 
 .fal {
